--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,8 @@
 # Django stuff:
 *.log
 local_settings.py
-travelsBackend/texpenses/.admin.py.swp
+travelsBackend/texpenses/.*.py.swp
+travelsBackend/travelsBackend/.*.py.swp
 #backend sqlite testing db
 #travelsBackend/db.sqlite3
 
