--- a/travelsFront/package.json
+++ b/travelsFront/package.json
@@ -25,6 +25,7 @@
     "ember-cli-app-version": "^1.0.0",
     "ember-cli-babel": "^5.1.5",
     "ember-cli-bootstrap-sassy": "0.5.2",
+    "ember-cli-cors": "0.0.2",
     "ember-cli-dependency-checker": "^1.2.0",
     "ember-cli-htmlbars": "^1.0.1",
     "ember-cli-htmlbars-inline-precompile": "^0.3.1",
