Update gitignore file

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ travelsBackend/travelsBackend/.*.py.swp
 travelsBackend/travelsBackend/*.py~
 travelsBackend/texpenses/.admin.py.swp
 travelsBackend/texpenses/migrations/
+instructions.txt~
 #backend sqlite testing db
 
 travelsBackend/db.sqlite3
