--- a/travelsFront/package.json
+++ b/travelsFront/package.json
@@ -41,6 +41,8 @@
     "ember-export-application-global": "^1.0.4",
     "ember-load-initializers": "^0.5.0",
     "ember-resolver": "^2.0.3",
+    "ember-simple-auth": "1.1.0-beta.3",
+    "ember-simple-auth-token": "1.0.0",
     "loader.js": "^4.0.0"
   }
 }
