--- a/travelsFront/package.json
+++ b/travelsFront/package.json
@@ -44,5 +44,8 @@
     "ember-simple-auth": "1.1.0-beta.3",
     "ember-simple-auth-token": "1.0.0",
     "loader.js": "^4.0.0"
+  },
+  "dependencies": {
+    "ember-truth-helpers": "^1.2.0"
   }
 }
