--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,7 @@ travelsBackend/texpenses/.*.py.swp
 travelsBackend/travelsBackend/.*.py.swp
 travelsBackend/travelsBackend/*.py~
 travelsBackend/texpenses/.admin.py.swp
-
+travelsBackend/texpenses/migrations/
 instructions.txt~
 travelsBackend/texpenses/migrations/*
 #backend sqlite testing db
@@ -21,3 +21,6 @@ travelsBackend/db.sqlite3
 .gitignore~
 *.py~
 *$py.class
+*.js~
+*.swp
+*.hbs~
