--- a/travelsFront/package.json
+++ b/travelsFront/package.json
@@ -25,6 +25,7 @@
     "ember-cli": "2.4.1",
     "ember-cli-app-version": "^1.0.0",
     "ember-cli-babel": "^5.1.5",
+    "ember-cli-bootstrap-datetimepicker": "0.1.5",
     "ember-cli-bootstrap-sassy": "0.5.2",
     "ember-cli-cors": "0.0.2",
     "ember-cli-dependency-checker": "^1.2.0",
@@ -32,6 +33,7 @@
     "ember-cli-htmlbars-inline-precompile": "^0.3.1",
     "ember-cli-inject-live-reload": "^1.3.1",
     "ember-cli-mirage": "0.1.11",
+    "ember-cli-moment-shim": "1.3.0",
     "ember-cli-qunit": "^1.2.1",
     "ember-cli-release": "0.2.8",
     "ember-cli-sass": "5.3.0",
@@ -46,7 +48,10 @@
     "ember-simple-auth": "1.1.0-beta.3",
     "ember-simple-auth-token": "1.0.0",
     "ember-text-limit": "0.1.0",
-    "loader.js": "^4.0.0"
+    "eonasdan-bootstrap-datetimepicker-npm": "4.17.37",
+    "loader.js": "^4.0.0",
+    "moment": "2.13.0",
+    "moment-timezone": "0.5.4"
   },
   "dependencies": {
     "ember-cp-validations": "git+https://github.com/offirgolan/ember-cp-validations.git#8c63c3c174ac813d02f6b847b1616f89e844c52b",
