Document new petition related endpoints

--- a/travelsBackend/requirements.txt
+++ b/travelsBackend/requirements.txt
@@ -1,10 +1,15 @@
-django==1.9.4
-djoser==0.4.3
-djangorestframework==3.3.3
-markdown==2.6.6
-django-filter==0.13.0
-requests==2.9.1
-drf-tracking==0.2.5
-pytz==2016.3
+Django==1.9.4
 django-crispy-forms==1.6.0
+django-filter==0.13.0
+django-guardian==1.4.2
+django-model-utils==2.5
+djangorestframework==3.3.3
+djoser==0.4.3
+drf-tracking==0.2.5
 drfdocs==0.0.9
+Markdown==2.6.6
+pytz==2016.3
+requests==2.9.1
+six==1.10.0
+workdays==1.4
+
