--- a/travelsFront/bower.json
+++ b/travelsFront/bower.json
@@ -9,6 +9,9 @@
     "pretender": "~0.10.1",
     "lodash": "~3.7.0",
     "Faker": "~3.0.0",
-    "moment": "^2.13.0"
+    "moment": "^2.13.0",
+    "hammer.js": "^2.0.8",
+    "matchMedia": "0.2.0",
+    "materialize": "0.97.6"
   }
 }
