--- a/travelsFront/package.json
+++ b/travelsFront/package.json
@@ -36,7 +36,7 @@
     "ember-cli-moment-shim": "1.3.0",
     "ember-cli-qunit": "^1.2.1",
     "ember-cli-release": "0.2.8",
-    "ember-cli-sass": "5.3.0",
+    "ember-cli-sass": "5.3.1",
     "ember-cli-sri": "^2.1.0",
     "ember-cli-uglify": "^1.2.0",
     "ember-cp-validations": "2.7.1",
@@ -44,10 +44,13 @@
     "ember-disable-proxy-controllers": "^1.0.1",
     "ember-export-application-global": "^1.0.4",
     "ember-load-initializers": "^0.5.0",
+    "ember-lodash": "0.0.10",
+    "ember-paper": "git+https://github.com/miguelcobain/ember-paper.git#c455e2d733c1dff7a7bb5213c42cdf6134a0fcd6",
     "ember-resolver": "^2.0.3",
     "ember-simple-auth": "1.1.0-beta.3",
     "ember-simple-auth-token": "1.0.0",
     "ember-text-limit": "0.1.0",
+    "ember-transition-helper": "0.0.6",
     "eonasdan-bootstrap-datetimepicker-npm": "4.17.37",
     "loader.js": "^4.0.0",
     "moment": "2.13.0",
