--- a/.gitignore
+++ b/.gitignore
@@ -17,7 +17,7 @@ travelsBackend/texpenses/.admin.py.swp
 travelsBackend/texpenses/migrations/
 instructions.txt~
 travelsBackend/texpenses/migrations/*
-../resources/.*.swo
+resources/.*.swo
 #backend sqlite testing db
 
 *.sqlite3
