--- a/travelsFront/bower.json
+++ b/travelsFront/bower.json
@@ -12,6 +12,7 @@
     "moment": "^2.13.0",
     "hammer.js": "^2.0.8",
     "matchMedia": "0.2.0",
-    "materialize": "0.97.6"
+    "materialize": "0.97.6",
+    "font-awesome": "~4.5.0"
   }
 }
