Refactor model-form fields
split out field widgets in separate components

Conflicts:
	travelsFront/app/lib/models/petition.js

--- a/travelsFront/bower.json
+++ b/travelsFront/bower.json
@@ -13,6 +13,7 @@
     "hammer.js": "^2.0.8",
     "matchMedia": "0.2.0",
     "materialize": "0.97.6",
-    "font-awesome": "~4.5.0"
+    "font-awesome": "~4.5.0",
+    "pikaday": "^1.4.0"
   }
 }
