--- a/travelsFront/package.json
+++ b/travelsFront/package.json
@@ -25,15 +25,14 @@
     "ember-cli": "2.4.1",
     "ember-cli-app-version": "^1.0.0",
     "ember-cli-babel": "^5.1.5",
-    "ember-cli-bootstrap-datetimepicker": "0.1.5",
-    "ember-cli-bootstrap-sassy": "0.5.2",
     "ember-cli-cors": "0.0.2",
     "ember-cli-dependency-checker": "^1.2.0",
+    "ember-cli-fastboot": "1.0.0-beta.5",
     "ember-cli-htmlbars": "^1.0.1",
     "ember-cli-htmlbars-inline-precompile": "^0.3.1",
     "ember-cli-inject-live-reload": "^1.3.1",
     "ember-cli-mirage": "0.1.11",
-    "ember-cli-moment-shim": "1.3.0",
+    "ember-cli-moment-shim": "2.0.0",
     "ember-cli-qunit": "^1.2.1",
     "ember-cli-release": "0.2.8",
     "ember-cli-sass": "5.3.1",
@@ -47,17 +46,19 @@
     "ember-load-initializers": "^0.5.0",
     "ember-lodash": "0.0.10",
     "ember-paper": "git+https://github.com/miguelcobain/ember-paper.git#c455e2d733c1dff7a7bb5213c42cdf6134a0fcd6",
+    "ember-pikaday": "2.1.0",
     "ember-resolver": "^2.0.3",
     "ember-simple-auth": "1.1.0-beta.3",
     "ember-simple-auth-token": "1.0.0",
     "ember-text-limit": "0.1.0",
     "ember-transition-helper": "0.0.6",
-    "eonasdan-bootstrap-datetimepicker-npm": "4.17.37",
     "loader.js": "^4.0.0",
     "moment": "2.13.0",
     "moment-timezone": "0.5.4"
   },
   "dependencies": {
+    "core-object": "^2.0.5",
+    "debug": "^2.2.0",
     "ember-cp-validations": "git+https://github.com/offirgolan/ember-cp-validations.git#8c63c3c174ac813d02f6b847b1616f89e844c52b",
     "ember-django-adapter": "^1.1.2",
     "ember-truth-helpers": "^1.2.0",
