--- a/travelsFront/bower.json
+++ b/travelsFront/bower.json
@@ -14,6 +14,6 @@
     "matchMedia": "0.2.0",
     "materialize": "0.97.6",
     "font-awesome": "~4.5.0",
-    "pikaday": "^1.4.0"
+    "pickadate": "^3.5.6"
   }
 }
