--- a/travelsFront/package.json
+++ b/travelsFront/package.json
@@ -33,6 +33,7 @@
     "ember-cli-inject-live-reload": "^1.3.1",
     "ember-cli-mirage": "0.1.11",
     "ember-cli-moment-shim": "2.0.0",
+    "ember-cli-pickadate": "1.3.5",
     "ember-cli-qunit": "^1.2.1",
     "ember-cli-release": "0.2.8",
     "ember-cli-sass": "5.3.1",
@@ -46,7 +47,6 @@
     "ember-load-initializers": "^0.5.0",
     "ember-lodash": "0.0.10",
     "ember-paper": "git+https://github.com/miguelcobain/ember-paper.git#c455e2d733c1dff7a7bb5213c42cdf6134a0fcd6",
-    "ember-pikaday": "2.1.0",
     "ember-resolver": "^2.0.3",
     "ember-simple-auth": "1.1.0-beta.3",
     "ember-simple-auth-token": "1.0.0",
