--- a/travelsFront/package.json
+++ b/travelsFront/package.json
@@ -33,7 +33,7 @@
     "ember-cli-inject-live-reload": "^1.3.1",
     "ember-cli-mirage": "0.1.11",
     "ember-cli-moment-shim": "2.0.0",
-    "ember-cli-pickadate": "1.3.5",
+    "ember-cli-pickadate": "git+https://github.com/AddJam/ember-cli-pickadate.git#e6eb203072d51048c633a403f7d4042b82b41015",
     "ember-cli-qunit": "^1.2.1",
     "ember-cli-release": "0.2.8",
     "ember-cli-sass": "5.3.1",
