Upgrade ember to 2.7.0-beta.3

--- a/travelsFront/package.json
+++ b/travelsFront/package.json
@@ -19,32 +19,31 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "broccoli-asset-rev": "^2.2.0",
-    "ember-ajax": "0.7.1",
+    "broccoli-asset-rev": "^2.4.2",
+    "ember-ajax": "^2.0.1",
     "ember-can": "0.8.1",
-    "ember-cli": "2.4.1",
+    "ember-cli": "2.7.0-beta.6",
     "ember-cli-app-version": "^1.0.0",
-    "ember-cli-babel": "^5.1.5",
-    "ember-cli-cors": "0.0.2",
+    "ember-cli-babel": "^5.1.6",
     "ember-cli-dependency-checker": "^1.2.0",
-    "ember-cli-fastboot": "1.0.0-beta.5",
-    "ember-cli-htmlbars": "^1.0.1",
+    "ember-cli-htmlbars": "^1.0.3",
     "ember-cli-htmlbars-inline-precompile": "^0.3.1",
-    "ember-cli-inject-live-reload": "^1.3.1",
+    "ember-cli-inject-live-reload": "^1.4.0",
     "ember-cli-mirage": "0.1.11",
     "ember-cli-moment-shim": "2.0.0",
     "ember-cli-pickadate": "git+https://github.com/AddJam/ember-cli-pickadate.git#e6eb203072d51048c633a403f7d4042b82b41015",
-    "ember-cli-qunit": "^1.2.1",
-    "ember-cli-release": "0.2.8",
+    "ember-cli-qunit": "^2.0.0",
+    "ember-cli-release": "^0.2.9",
     "ember-cli-sass": "5.3.1",
     "ember-cli-sri": "^2.1.0",
+    "ember-cli-test-loader": "^1.1.0",
     "ember-cli-uglify": "^1.2.0",
     "ember-cp-validations": "2.7.1",
-    "ember-data": "^2.4.0",
+    "ember-data": "^2.7.0-beta.3",
     "ember-disable-proxy-controllers": "^1.0.1",
-    "ember-export-application-global": "^1.0.4",
+    "ember-export-application-global": "^1.0.5",
     "ember-font-awesome": "2.1.1",
-    "ember-load-initializers": "^0.5.0",
+    "ember-load-initializers": "^0.5.1",
     "ember-lodash": "0.0.10",
     "ember-paper": "git+https://github.com/miguelcobain/ember-paper.git#c455e2d733c1dff7a7bb5213c42cdf6134a0fcd6",
     "ember-resolver": "^2.0.3",
@@ -52,7 +51,7 @@
     "ember-simple-auth-token": "1.0.0",
     "ember-text-limit": "0.1.0",
     "ember-transition-helper": "0.0.6",
-    "loader.js": "^4.0.0",
+    "loader.js": "^4.0.1",
     "moment": "2.13.0",
     "moment-timezone": "0.5.4"
   },
