--- a/travelsFront/bower.json
+++ b/travelsFront/bower.json
@@ -1,9 +1,8 @@
 {
   "name": "travels-front",
   "dependencies": {
-    "ember": "~2.4.1",
-    "ember-cli-shims": "0.1.0",
-    "ember-cli-test-loader": "0.2.2",
+    "ember": "~2.7.0-beta.4",
+    "ember-cli-shims": "0.1.1",
     "ember-qunit-notifications": "0.1.0",
     "bootstrap-sass": "^3.3.6",
     "pretender": "~0.10.1",
