--- a/travelsFront/package.json
+++ b/travelsFront/package.json
@@ -31,7 +31,7 @@
     "ember-cli-inject-live-reload": "^1.4.0",
     "ember-cli-mirage": "0.1.11",
     "ember-cli-moment-shim": "2.0.0",
-    "ember-cli-pickadate": "git+https://github.com/AddJam/ember-cli-pickadate.git#e6eb203072d51048c633a403f7d4042b82b41015",
+    "ember-cli-pickadate": "git+https://github.com/AddJam/ember-cli-pickadate.git#master",
     "ember-cli-qunit": "^2.0.0",
     "ember-cli-release": "^0.2.9",
     "ember-cli-sass": "5.3.1",
@@ -45,7 +45,7 @@
     "ember-font-awesome": "2.1.1",
     "ember-load-initializers": "^0.5.1",
     "ember-lodash": "0.0.10",
-    "ember-paper": "git+https://github.com/miguelcobain/ember-paper.git#c455e2d733c1dff7a7bb5213c42cdf6134a0fcd6",
+    "ember-paper": "git+https://github.com/vinilios/ember-paper.git#feature-modelform",
     "ember-resolver": "^2.0.3",
     "ember-simple-auth": "1.1.0-beta.3",
     "ember-simple-auth-token": "1.0.0",
@@ -58,7 +58,7 @@
   "dependencies": {
     "core-object": "^2.0.5",
     "debug": "^2.2.0",
-    "ember-cp-validations": "git+https://github.com/offirgolan/ember-cp-validations.git#8c63c3c174ac813d02f6b847b1616f89e844c52b",
+    "ember-cp-validations": "3.0.0-beta.3",
     "ember-django-adapter": "^1.1.2",
     "ember-truth-helpers": "^1.2.0",
     "moment": "^2.13.0"
