--- a/travelsFront/package.json
+++ b/travelsFront/package.json
@@ -44,6 +44,7 @@
     "ember-export-application-global": "^1.0.5",
     "ember-font-awesome": "2.1.1",
     "ember-i18n": "4.2.2",
+    "ember-i18n-cp-validations": "2.6.0",
     "ember-i18n-inject": "0.0.2",
     "ember-load-initializers": "^0.5.1",
     "ember-lodash": "0.0.10",
