--- a/travelsBackend/requirements.txt
+++ b/travelsBackend/requirements.txt
@@ -13,3 +13,10 @@ requests==2.9.1
 six==1.10.0
 workdays==1.4
 inflection==0.3.1
+html5lib==0.999999999
+Pillow==3.3.1
+PyPDF2==1.26.0
+reportlab==3.3.0
+webencodings==0.5
+xhtml2pdf==0.0.6
+
