--- a/travelsFront/package.json
+++ b/travelsFront/package.json
@@ -52,7 +52,9 @@
     "ember-resolver": "^2.0.3",
     "ember-simple-auth": "1.1.0-beta.3",
     "ember-simple-auth-token": "1.0.0",
+    "ember-tether": "0.3.1",
     "ember-text-limit": "0.1.0",
+    "ember-tooltips": "2.0.1",
     "ember-transition-helper": "0.0.6",
     "loader.js": "^4.0.1",
     "moment": "2.13.0",
