--- a/travelsBackend/requirements.txt
+++ b/travelsBackend/requirements.txt
@@ -13,10 +13,15 @@ requests==2.9.1
 six==1.10.0
 workdays==1.4
 inflection==0.3.1
+cairocffi==0.6
+CairoSVG==1.0.22
+cffi==1.8.3
+cssselect==0.9.2
 html5lib==0.999999999
-Pillow==3.3.1
-PyPDF2==1.26.0
-reportlab==3.3.0
+lxml==3.6.4
+pycparser==2.14
+Pyphen==0.9.4
+tinycss==0.3
+WeasyPrint==0.31
 webencodings==0.5
-xhtml2pdf==0.0.6
 
