--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,10 @@ travelsBackend/travelsBackend/.*.py.swp
 travelsBackend/travelsBackend/*.py~
 travelsBackend/texpenses/.admin.py.swp
 travelsBackend/texpenses/migrations/
+travelsBackend/uploads/
+*.swo
+*.swn
+
 instructions.txt~
 travelsBackend/texpenses/migrations/*
 resources/.*.swo
