--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,8 @@ travelsBackend/uploads/
 *.swn
 
 instructions.txt~
+travelsBackend/texpenses/migrations/
+travelsBackend/texpenses/migrations/*
 resources/.*.swo
 uploads/
 #backend sqlite testing db
