--- a/travelsBackend/requirements.txt
+++ b/travelsBackend/requirements.txt
@@ -1,4 +1,4 @@
-backports.shutil-get-terminal-size==1.0.0
+ckports.shutil-get-terminal-size==1.0.0
 cairocffi==0.6
 CairoSVG==1.0.22
 cffi==1.2.1
@@ -25,6 +25,7 @@ pathlib2==2.1.0
 pexpect==4.2.1
 pickleshare==0.7.4
 prompt-toolkit==1.0.7
+psycopg2==2.6.2
 ptyprocess==0.5.1
 pycparser==2.14
 Pygments==2.1.3
