--- a/travelsFront/package.json
+++ b/travelsFront/package.json
@@ -39,11 +39,13 @@
     "ember-cli-test-loader": "^1.1.0",
     "ember-cli-uglify": "^1.2.0",
     "ember-data": "^2.9.0",
+    "ember-django-adapter": "1.1.3",
     "ember-export-application-global": "^1.0.5",
     "ember-load-initializers": "^0.5.1",
     "ember-paper": "git+https://github.com/vinilios/ember-paper.git#5fbf1d6ed22013eb3a920107484482e073e42610",
     "ember-resolver": "^2.0.3",
     "ember-simple-auth": "1.1.0",
+    "ember-simple-auth-token": "1.2.0",
     "ember-welcome-page": "^1.0.3",
     "loader.js": "^4.0.10"
   }
