--- a/travelsFront/bower.json
+++ b/travelsFront/bower.json
@@ -5,6 +5,7 @@
     "ember-cli-shims": "0.1.3",
     "hammer.js": "^2.0.8",
     "pickadate": "^3.5.6",
-    "matchMedia": "0.2.0"
+    "matchMedia": "0.2.0",
+    "jquery-extendext": "^0.1.2"
   }
 }
