--- a/travelsFront/package.json
+++ b/travelsFront/package.json
@@ -58,7 +58,8 @@
     "ember-transition-helper": "0.0.6",
     "loader.js": "^4.0.1",
     "moment": "2.13.0",
-    "moment-timezone": "0.5.4"
+    "moment-timezone": "0.5.4",
+    "paper-data-table": "0.1.2"
   },
   "dependencies": {
     "core-object": "^2.0.5",
