--- a/travelsFront/bower.json
+++ b/travelsFront/bower.json
@@ -2,7 +2,7 @@
   "name": "travels-front",
   "dependencies": {
     "ember": "~2.7.0-beta.4",
-    "ember-cli-shims": "0.1.1",
+    "ember-cli-shims": "~0.1.1",
     "ember-qunit-notifications": "0.1.0",
     "bootstrap-sass": "^3.3.6",
     "pretender": "~0.10.1",
