--- a/travelsFront/package.json
+++ b/travelsFront/package.json
@@ -38,6 +38,7 @@
     "ember-cli-sri": "^2.1.0",
     "ember-cli-test-loader": "^1.1.0",
     "ember-cli-uglify": "^1.2.0",
+    "ember-composable-helpers": "1.1.3",
     "ember-cp-validations": "2.7.1",
     "ember-data": "^2.7.0-beta.3",
     "ember-disable-proxy-controllers": "^1.0.1",
