--- a/travelsBackend/requirements.txt
+++ b/travelsBackend/requirements.txt
@@ -1,12 +1,18 @@
+apimas==0.3
+-e git+ssh://phab-vcs-user@phab.dev.grnet.gr:222/diffusion/APIMAS/apimas.git@334398e0d5e8916f64b0c16c57fb42040a4e4278#egg=apimas_drf&subdirectory=apimas-drf
 backports.shutil-get-terminal-size==1.0.0
 cairocffi==0.6
 CairoSVG==1.0.22
-cffi==1.2.1
+Cerberus==1.0.1
+cffi==1.9.1
+click==6.6
+coverage==4.3.4
 cssselect==0.9.2
 decorator==4.0.10
-Django==1.7
+Django==1.8
 django-crispy-forms==1.6.0
-django-filter==0.7
+django-crontab==0.6.0
+django-filter==1.0.0
 django-guardian==1.4.2
 django-model-utils==2.5
 djangorestframework==3.3.3
@@ -15,13 +21,20 @@ drf-extensions==0.3.1
 drf-tracking==0.2.5
 drfdocs==0.0.9
 enum34==1.1.6
+Faker==0.7.7
+funcsigs==1.0.2
+geopy==1.11.0
+googlemaps==2.4.5
 html5lib==0.999999999
 inflection==0.3.1
+ipaddress==1.0.18
 ipython==5.1.0
 ipython-genutils==0.1.0
 lxml==3.6.4
 Markdown==2.6.6
+mock==2.0.0
 pathlib2==2.1.0
+pbr==1.10.0
 pexpect==4.2.1
 pickleshare==0.7.4
 prompt-toolkit==1.0.7
@@ -30,15 +43,17 @@ ptyprocess==0.5.1
 pycparser==2.14
 Pygments==2.1.3
 Pyphen==0.9.4
+python-dateutil==2.6.0
 python-memcached==1.58
 pytz==2016.3
+PyYAML==3.12
 requests==2.9.1
 simplegeneric==0.8.1
 six==1.10.0
+tabulate==0.7.7
 tinycss==0.3
 traitlets==4.3.0
 wcwidth==0.1.7
 WeasyPrint==0.31
 webencodings==0.5
 workdays==1.4
-
