--- a/travelsFront/package.json
+++ b/travelsFront/package.json
@@ -27,7 +27,7 @@
     "ember-cli-babel": "^5.1.7",
     "ember-cli-dependency-checker": "^1.3.0",
     "ember-cli-gen": "git+ssh://phab-vcs-user@phab.dev.grnet.gr:222/diffusion/EMBERGEN/ember-gen.git#feature-refactor",
-    "ember-cli-gen-apimas": "git+ssh://phab-vcs-user@phab.dev.grnet.gr:222/source/ember-gen-apimas.git#master",
+    "ember-cli-gen-apimas": "^0.0.2",
     "ember-cli-htmlbars": "^1.0.10",
     "ember-cli-htmlbars-inline-precompile": "^0.3.3",
     "ember-cli-inject-live-reload": "^1.4.1",
