--- a/travelsFront/package.json
+++ b/travelsFront/package.json
@@ -42,6 +42,7 @@
     "ember-data": "^2.9.0",
     "ember-django-adapter": "1.1.3",
     "ember-export-application-global": "^1.0.5",
+    "ember-i18n": "5.0.0",
     "ember-load-initializers": "^0.5.1",
     "ember-paper": "git+https://github.com/vinilios/ember-paper.git#ember-gen-beta",
     "ember-resolver": "^2.0.3",
