--- a/travelsFront/package.json
+++ b/travelsFront/package.json
@@ -68,6 +68,7 @@
     "ember-cp-validations": "3.0.0-beta.3",
     "ember-django-adapter": "^1.1.2",
     "ember-truth-helpers": "^1.2.0",
-    "moment": "^2.13.0"
+    "moment": "^2.13.0",
+    "moment-timezone": "^0.5.4"
   }
 }
