Remove iban and afm responses

--- a/travelsBackend/visualizations/logstash-5.4-2/travel_expenses.conf
+++ b/travelsBackend/visualizations/logstash-5.4-2/travel_expenses.conf
@@ -46,6 +46,6 @@ elasticsearch {
     hosts => ["127.0.0.1:9200"]
     index => "travel_expenses"
     template => "/home/kostas/Desktop/logstash-5.4.2/config/template.json"
-    document_id => "%{task_start_date}:%{project}:%{arrival_point}:%{tax_reg_num}"
+    document_id => "%{task_start_date}:%{project}:%{arrival_point}:%{last_name}"
   }
 }
