--- a/travelsBackend/visualizations/logstash-5.4-2/travel_expenses.conf
+++ b/travelsBackend/visualizations/logstash-5.4-2/travel_expenses.conf
@@ -5,7 +5,7 @@ input {
       travel_expenses => {
         
         method => get
-        url => "http://localhost:8000/api/project/all_project_stats_json/"
+        url => "http://localhost:8000/api/project/stats/"
         
         auth => {
           user => "admin"
