Configure travel_expenses.conf accordingly

--- a/travelsBackend/visualizations/logstash-5.4-2/travel_expenses.conf
+++ b/travelsBackend/visualizations/logstash-5.4-2/travel_expenses.conf
@@ -5,7 +5,7 @@ input {
       travel_expenses => {
         
         method => get
-        url => "http://localhost:8000/api/project/stats/"
+        url => "http://172.17.0.1:8000/api/project/stats/"
         
         auth => {
           user => "admin"
@@ -43,9 +43,9 @@ date {
 output {
 
 elasticsearch {
-    hosts => ["127.0.0.1:9200"]
+    hosts => ["es:9200"]
     index => "travel_expenses"
-    template => "/home/kostas/Desktop/logstash-5.4.2/config/template.json"
+    template => "/config-dir/template.json"
     document_id => "%{task_start_date}:%{project}:%{arrival_point}:%{last_name}"
   }
 }
