--- a/travelsBackend/visualizations/elk/docker-compose.yml
+++ b/travelsBackend/visualizations/elk/docker-compose.yml
@@ -4,27 +4,28 @@ services:
                 image: elasticsearch:2.4.0
                 ports:
                  - "9200:9200"
-                volumes:
-                 - ../confs/elastic-2.4.0/elasticsearch.yml:/usr/share/elasticsearch/config/elasticsearch.yml
+                environment:
+                 - http.host=0.0.0.0
+                 - transport.host=127.0.0.1
         kibana:
                 image: kibana:4.6.4
                 ports:
                  - "5601:5601"
-                volumes:
-                 - ../confs/kibana-4.6.4/kibana.yml:/opt/kibana/config/kibana.yml
-                depends_on:
-                 - es
                 links:
+                 - es
+                environment:
+                 - ELASTICSEARCH_URL=http://es:9200
+                 - SERVER_HOST=127.0.0.1
+                depends_on:
                  - es
         logstash:
                 image: logstash:5.4.2
                 volumes:
-                 - ../confs/logstash-5.4.2:/config-dir
+                 - ../confs/:/config-dir
                 command: logstash -f /config-dir/travel_expenses.conf
                 ports:
                  - "5000:5000"
                 depends_on:
                  - es
-                links:
-                 - es
+
 
