--- a/travelsFront/package.json
+++ b/travelsFront/package.json
@@ -40,7 +40,7 @@
     "ember-cli-uglify": "^1.2.0",
     "ember-composable-helpers": "1.1.3",
     "ember-cp-validations": "2.7.1",
-    "ember-data": "^2.7.0-beta.3",
+    "ember-data": "2.7.0-beta.3",
     "ember-disable-proxy-controllers": "^1.0.1",
     "ember-export-application-global": "^1.0.5",
     "ember-font-awesome": "2.1.1",
@@ -64,10 +64,10 @@
   "dependencies": {
     "core-object": "^2.0.5",
     "debug": "^2.2.0",
-    "ember-cp-validations": "3.0.0-beta.3",
+    "ember-cp-validations": "2.7.1",
     "ember-django-adapter": "^1.1.2",
     "ember-truth-helpers": "^1.2.0",
-    "moment": "^2.13.0",
+    "moment": "2.13.0",
     "moment-timezone": "^0.5.13"
   }
 }
