--- a/travelsFront/package.json
+++ b/travelsFront/package.json
@@ -21,34 +21,36 @@
   "devDependencies": {
     "broccoli-asset-rev": "^2.4.5",
     "ember-ajax": "^2.4.1",
-    "ember-can": "^0.8.1",
+    "ember-can": "0.8.1",
     "ember-cli": "2.9.1",
     "ember-cli-app-version": "^2.0.0",
     "ember-cli-babel": "^5.1.7",
     "ember-cli-dependency-checker": "^1.3.0",
-    "ember-cli-gen": "git+ssh://phab-vcs-user@phab.dev.grnet.gr:222/diffusion/EMBERGEN/ember-gen.git#develop",
-    "ember-cli-gen-apimas": "^0.0.2",
+    "ember-cli-gen": "1.0.5",
     "ember-cli-htmlbars": "^1.0.10",
     "ember-cli-htmlbars-inline-precompile": "^0.3.3",
     "ember-cli-inject-live-reload": "^1.4.1",
     "ember-cli-jshint": "^1.0.4",
-    "ember-cli-pickadate": "git+https://github.com/AddJam/ember-cli-pickadate.git#master",
+    "ember-cli-pickadate": "git+https://github.com/AddJam/ember-cli-pickadate.git#c4f5857a7d5c37b9957b2b91da22908f8959878c",
     "ember-cli-qunit": "^3.0.1",
     "ember-cli-release": "^0.2.9",
-    "ember-cli-sass": "^5.6.0",
+    "ember-cli-sass": "5.6.0",
     "ember-cli-sri": "^2.1.0",
     "ember-cli-test-loader": "^1.1.0",
     "ember-cli-uglify": "^1.2.0",
-    "ember-data": "^2.9.0",
+    "ember-data": "~2.13.0",
     "ember-django-adapter": "1.1.3",
     "ember-export-application-global": "^1.0.5",
     "ember-i18n": "5.0.0",
     "ember-load-initializers": "^0.5.1",
-    "ember-paper": "git+https://github.com/vinilios/ember-paper.git#ember-gen-beta",
+    "ember-paper": "git+https://github.com/vinilios/ember-paper.git#173fb6c026bf189cf297709620c8a234833d378a",
     "ember-resolver": "^2.0.3",
-    "ember-simple-auth": "^1.1.0",
+    "ember-simple-auth": "1.1.0",
     "ember-simple-auth-token": "1.2.0",
     "ember-welcome-page": "^1.0.3",
     "loader.js": "^4.0.10"
+  },
+  "dependencies": {
+    "ember-cli-gen-apimas": "0.0.12"
   }
 }
