--- a/travelsFront/package.json
+++ b/travelsFront/package.json
@@ -26,7 +26,7 @@
     "ember-cli-app-version": "^2.0.0",
     "ember-cli-babel": "^5.1.7",
     "ember-cli-dependency-checker": "^1.3.0",
-    "ember-cli-gen": "1.0.5",
+    "ember-cli-gen": "^1.0.10",
     "ember-cli-htmlbars": "^1.0.10",
     "ember-cli-htmlbars-inline-precompile": "^0.3.3",
     "ember-cli-inject-live-reload": "^1.4.1",
@@ -52,7 +52,7 @@
     "loader.js": "^4.0.10"
   },
   "dependencies": {
-    "ember-cli-gen-apimas": "0.0.12",
+    "ember-cli-gen-apimas": "0.0.13",
     "moment": "^2.19.1"
   }
 }
