--- a/travelsFront/package.json
+++ b/travelsFront/package.json
@@ -44,7 +44,7 @@
     "ember-export-application-global": "^1.0.5",
     "ember-i18n": "5.0.0",
     "ember-load-initializers": "^0.5.1",
-    "ember-paper": "git+https://github.com/vinilios/ember-paper.git#173fb6c026bf189cf297709620c8a234833d378a",
+    "ember-paper": "git+https://github.com/vinilios/ember-paper.git#ember-gen-beta",
     "ember-resolver": "^2.0.3",
     "ember-simple-auth": "1.1.0",
     "ember-simple-auth-token": "1.2.0",
