--- a/travelsFront/package.json
+++ b/travelsFront/package.json
@@ -28,6 +28,7 @@
     "ember-cli-dependency-checker": "^1.3.0",
     "ember-cli-gen": "^1.0.13",
     "ember-cli-htmlbars": "^1.0.10",
+    "ember-changeset": "1.2.0",
     "ember-cli-htmlbars-inline-precompile": "^0.3.3",
     "ember-cli-inject-live-reload": "^1.4.1",
     "ember-cli-jshint": "^1.0.4",
