Install & configure eslint

--- a/travelsFront/package.json
+++ b/travelsFront/package.json
@@ -19,6 +19,7 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "babel-eslint": "^8.2.2",
     "broccoli-asset-rev": "^2.4.5",
     "ember-ajax": "^2.4.1",
     "ember-can": "0.8.1",
@@ -31,7 +32,6 @@
     "ember-changeset": "1.2.0",
     "ember-cli-htmlbars-inline-precompile": "^0.3.3",
     "ember-cli-inject-live-reload": "^1.4.1",
-    "ember-cli-jshint": "^1.0.4",
     "ember-cli-moment-shim": "3.5.0",
     "ember-cli-pickadate": "git+https://github.com/AddJam/ember-cli-pickadate.git#c4f5857a7d5c37b9957b2b91da22908f8959878c",
     "ember-cli-qunit": "^3.0.1",
@@ -50,6 +50,8 @@
     "ember-simple-auth": "1.1.0",
     "ember-simple-auth-token": "1.2.0",
     "ember-welcome-page": "^1.0.3",
+    "eslint": "^4.19.1",
+    "eslint-plugin-import": "^2.9.0",
     "loader.js": "^4.0.10"
   },
   "dependencies": {
