--- a/debian/control
+++ b/debian/control
@@ -8,5 +8,5 @@ Standards-Version: 3.9.6
 
 Package: travel
 Architecture: all
-Depends: ${shlibs:Depends}, ${misc:Depends}, ${python:Depends}, python-apimas (>= 0.3.3), python-apimas-drf (>= 0.3.3), python-django (>= 1.8), python-django (< 1.9), django-filter (>= 0.12), django-filter (<< 0.16), python-django-model-utils (<= 2.5), python-djangorestframework (>= 3.3.3), python-djangorestframework (<< 3.4), python-djoser (>= 0.4.3), python-stdnum (<= 1.5), python-cairocffi (<= 0.6), python-psycopg2 (<= 2.6.2), python-memcache (<= 1.58), python-tz (<= 2016.3), libffi-dev (>= 3.1), libpango-1.0-0 (>= 1.36), libpangocairo-1.0-0 (>= 1.36), shared-mime-info (>= 1.3)
+Depends: ${shlibs:Depends}, ${misc:Depends}, ${python:Depends}, python-django (>= 1.8), python-django (< 1.9), django-filter (>= 0.12), django-filter (<< 0.16), python-django-model-utils (<= 2.5), python-djangorestframework (>= 3.3.3), python-djangorestframework (<< 3.4), python-djoser (>= 0.4.3), python-stdnum (<= 1.5), python-cairocffi (<= 0.6), python-psycopg2 (<= 2.6.2), python-memcache (<= 1.58), python-tz (<= 2016.3), libffi-dev (>= 3.1), libpango-1.0-0 (>= 1.36), libpangocairo-1.0-0 (>= 1.36), shared-mime-info (>= 1.3)
 Description: Software for GRNET's Travel Expenses service.
