--- a/debian/control
+++ b/debian/control
@@ -8,5 +8,5 @@ Standards-Version: 3.9.6
 
 Package: travel
 Architecture: all
-Depends: ${shlibs:Depends}, ${misc:Depends}, python, python:any (<< 2.8), python:any (>= 2.7.5-5~), python-django (>= 1.8), python-django (< 1.9), python-django-model-utils (<= 2.5), python-stdnum (<= 1.5), python-cairocffi (<= 0.6), python-psycopg2 (<= 2.6.2), python-memcache (<= 1.58), python-tz (<= 2016.3), libffi-dev (>= 3.1), libpango-1.0-0 (>= 1.36), libpangocairo-1.0-0 (>= 1.36), shared-mime-info (>= 1.3)
+Depends: ${shlibs:Depends}, ${misc:Depends}, python, python:any (<< 2.8), python:any (>= 2.7.5-5~), python-django (>= 1.8), python-django (< 1.9), python-django-model-utils (<= 2.5), python-stdnum (<= 1.5), python-cairocffi (<= 0.6), python-psycopg2 (<= 2.6.2), python-memcache (<= 1.58), python-tz (<= 2016.3), libffi-dev (>= 3.1), libpango-1.0-0 (>= 1.36), libpangocairo-1.0-0 (>= 1.36), shared-mime-info (>= 1.3), python-xlsxwriter (>=0.5.2)
 Description: Software for GRNET's Travel Expenses service.
