--- a/.dockerignore
+++ b/.dockerignore
@@ -1,10 +1,10 @@
 Dockerfile
-.git
+.*/*git
 ./travelsFront/dist
 ./travelsFront/node_modules
 ./travelsFront/bower_components
 ./travelsFront/tmp
-*.swp
-*.pyc
-*.sqlite3
-*.*~
+**/*.swp
+**/*.pyc
+**/*.sqlite3
+**/*.*~
