--- a/deploy/settings.conf
+++ b/deploy/settings.conf
@@ -5,6 +5,9 @@ import os
 # consider using an absolute hardcoded path in production
 BASE_DIR = os.path.abspath(os.getcwd())
 
+# SECURITY WARNING: keep the secret key used in production secret!
+SECRET_KEY = '26ch88!x45adfwl4-6vuh6@3z^-@8#^b8#a@)ty(tp^)1!za*x'
+
 DATABASES = {
     'default': {
         'ENGINE': 'django.db.backends.sqlite3',
@@ -29,8 +32,8 @@ DEBUG = True
 TEMPLATE_DEBUG = DEBUG
 
 SETTINGS_DIR = '/etc/travel/'
-UI_ROOT ='/srv/travel/travelsFront/dist/'
-HOST_URL = "http://localhost"
+UI_ROOT = '/srv/travel/travelsFront/dist/'
+HOST_URL = None
 ALLOWED_HOSTS = ['*']
 RESOURCES_DIR = '/srv/travel/resources'
 
