Change Dockerfile to allow easier deploy changes

--- a/deploy/settings.conf
+++ b/deploy/settings.conf
@@ -11,7 +11,7 @@ SECRET_KEY = '26ch88!x45adfwl4-6vuh6@3z^-@8#^b8#a@)ty(tp^)1!za*x'
 DATABASES = {
     'default': {
         'ENGINE': 'django.db.backends.sqlite3',
-        'NAME': os.path.join(BASE_DIR, 'mydb.sqlite3'),
+        'NAME': os.path.join(BASE_DIR, 'mydb-docker.sqlite3'),
     }
 }
 
