--- a/travelsFront/package.json
+++ b/travelsFront/package.json
@@ -56,6 +56,7 @@
   },
   "dependencies": {
     "ember-cli-gen-apimas": "0.0.18",
-    "moment": "^2.19.1"
+    "moment": "^2.19.1",
+    "moment-timezone": "^0.5.23"
   }
 }
