--- a/travelsFront/package.json
+++ b/travelsFront/package.json
@@ -10,11 +10,13 @@
   "scripts": {
     "build": "ember build",
     "start": "ember server",
-    "test": "ember test"
+    "test": "ember test",
+    "postinstall": "node -e \"try { require('fs').symlinkSync(require('path').resolve('node_modules/@bower_components'), 'bower_components', 'junction') } catch (e) { }\""
   },
   "repository": "",
   "engines": {
-    "node": ">= 0.12.0"
+    "node": ">= 0.12.0",
+    "yarn": ">= 1.0.0"
   },
   "author": "",
   "license": "MIT",
@@ -26,7 +28,6 @@
     "ember-cli": "2.9.1",
     "ember-cli-app-version": "^2.0.0",
     "ember-cli-babel": "^5.1.7",
-    "ember-cli-dependency-checker": "^1.3.0",
     "ember-cli-gen": "^1.0.17",
     "ember-cli-htmlbars": "^1.0.10",
     "ember-changeset": "1.2.0",
@@ -57,6 +58,13 @@
   "dependencies": {
     "ember-cli-gen-apimas": "0.0.18",
     "moment": "^2.19.1",
-    "moment-timezone": "^0.5.23"
+    "moment-timezone": "^0.5.23",
+    "@bower_components/ember": "components/ember#~2.9.0",
+    "@bower_components/ember-cli-shims": "ember-cli/ember-cli-shims#0.1.3",
+    "@bower_components/hammer.js": "hammerjs/hammer.js#^2.0.8",
+    "@bower_components/jquery": "jquery/jquery-dist#>= 1.7.0 < 4.0.0",
+    "@bower_components/jquery-extendext": "mistic100/jQuery.extendext#^0.1.2",
+    "@bower_components/matchMedia": "paulirish/matchMedia.js#0.2.0",
+    "@bower_components/pickadate": "amsul/pickadate.js#^3.5.6"
   }
 }
